fix: CSP (google fonts, yotube embed, self server), Editor header body. feat: Editor (styled link, list, and text alignment)

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 @theme {
   --color-primary: rgb(0, 208, 132);
   --color-secondary: #9333ea;
+}
+
+.ProseMirror:focus {
+  outline: none;
 }
